--- a/pom.xml
+++ b/pom.xml
@@ -50,10 +50,23 @@
 			<optional>true</optional>
 		</dependency>
 		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-api</artifactId>
+<!--			<version>5.9.1</version>-->
+			<scope>test</scope>
+		</dependency>
+
 
 		<dependency>
 			<groupId>org.mapstruct</groupId>
