--- a/pom.xml
+++ b/pom.xml
@@ -73,8 +73,27 @@
 			<artifactId>mapstruct</artifactId>
 			<version>${org.mapstruct.version}</version>
 		</dependency>
-
 	</dependencies>
+	<profiles>
+		<profile>
+			<id>integration-test</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<version>${maven-surefire-plugin.version}</version>
+						<configuration>
+							<includes>
+								<include>**/*Tests.*</include><!--IDEPENDENTE DA PASTA/EXECUTE TUDO QUE CONTÉM "Tests" NO FINAL DO NOME.SEM IMPORTAR A EXTENSÃO(.JAVA,.TXT...)-->
+								<include>**/*IT.*</include><!--IDEPENDENTE DA PASTA/EXECUTE TUDO QUE CONTÉM "IT" NO FINAL DO NOME.SEM IMPORTAR A EXTENSÃO(.JAVA,.TXT...)-->
+							</includes>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 
 	<build>
 		<plugins>
